--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>fatcow/FatCow_Icons32x32/door_in.png</file>
     <file>google.json</file>
     <file>google.svg</file>
     <file>drunkfly.ico</file>
